# URGENT-MOS

./: .gitignore  LICENSE  README.md  path.sh.example  pyproject.toml  train.sh
configs/: f1c1m5_d_corpus.yaml
local/: infer_urgent2026_sqa.py
scripts/: eval.py  infer_vmc2026_track1.py
scripts/data/: collect_metrics.py  construct_pairs.py  csv2data.sh  csv2scps.py  get_utt2dur.py  prepare.sh
scripts/data/bc19/: data_prep.py  prepare.sh
scripts/data/bvcc/: data_prep.py  prepare.sh
scripts/data/chime-7-udase-eval/: data_prep.py  prepare.sh
scripts/data/custom/: prepare.sh
scripts/data/nisqa/: combine_datasets.py  data_prep.py  prepare.sh
scripts/data/pstn/: data_prep.py  prepare.sh
scripts/data/somos/: data_prep.py  prepare.sh
scripts/data/speecheval/: data_prep.py  prepare.sh
scripts/data/speechjudge/: data_prep.py  prepare.sh
scripts/data/tcd-voip/: data_prep.py  prepare.sh
scripts/data/tencent/: data_prep.py  prepare.sh
scripts/data/tmhint-qi/: data_prep.py  prepare.sh
scripts/data/ttsds2/: data_prep.py  prepare.sh
scripts/data/urgent2024-sqa/: data_prep.py  prepare.sh
scripts/data/urgent2025-sqa/: data_prep.py  prepare.sh
urgent_mos/: __init__.py  train.py
urgent_mos/api/: __init__.py  infer.py
urgent_mos/model/: audio_encoder.py  urgent_mos.py
